<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveExpences">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="230dp"
                        android:layout_height="145dp"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/appicon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/SEXP_Icon_Title"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_title_black_35dp" />

                    <EditText
                        android:id="@+id/SEXP_ET_Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/SEXP_Hint_Title"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/SEXP_Icon_Value2"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_date_range_black_35dp" />

                    <Spinner
                        android:id="@+id/SEXP_SP_Months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/SEXP_RB_Week1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SEXP_RB_FirstWeek" />

                        <RadioButton
                            android:id="@+id/SEXP_RB_Week2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SEXP_RB_SecondWeek" />

                        <RadioButton
                            android:id="@+id/SEXP_RB_Week3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SEXP_RB_ThirdWeek" />

                        <RadioButton
                            android:id="@+id/SEXP_RB_Week4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SEXP_RB_FourthWeek" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/SEXP_Icon_Value"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_monetization_on_black_35dp" />

                    <EditText
                        android:id="@+id/SEXP_ET_Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/SEXP_Hint_Value"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/SEXP_Icon_Date"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_today_black_35dp" />

                    <EditText
                        android:id="@+id/SEXP_ET_Date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/SEXP_Hint_Date"
                        android:importantForAutofill="no"
                        android:inputType="date|textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.18"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_content_paste_black_40dp" />

                    <EditText
                        android:id="@+id/SEXP_ET_Note"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/SEXP_Hint_Note"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/SEXP_Icon_Save"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_note_add_black_35dp" />

                    <Button
                        android:id="@+id/SEXP_BT_Save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="DBControler"
                        android:text="@string/SEXP_Text_Save" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:contentDescription="@string/Main_Alert_Button1"
                        app:srcCompat="@drawable/ic_reply_black_35dp" />

                    <Button
                        android:id="@+id/SEXP_BT_SeeExpenses"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startMain"
                        android:text="@string/SEXP_Text_SeeExpenses" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Main_Alert_Button1"
                        android:visibility="invisible" />
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>